# zeno

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.sh
data/themes/: dark-mode.toml  default.toml  high-contrast.toml  light-mode.toml
scripts/: build_linux.sh  install_linux.sh
src/: lib.rs  main.rs  theme.rs  utils.rs
src/editor/: mod.rs  open.rs  save.rs  screen.rs
src/profile/: mod.rs  options.rs  select.rs
src/theme/: get_themes.rs  mod.rs
themes/: dark.toml
