[package]
name = "zeno"
description = "A lightweight code editor."
readme = "README.md"
license = "GPL-3.0"
repository = "https://gitlab/zeno-src/zeno"
version = "0.0.0"
authors = ["Owez <owez@scalist.net>"]
edition = "2018"

[dependencies.cursive] # Default ncurses backend is insecure
git = "https://github.com/gyscos/cursive"
default-features = false
features = ["crossterm-backend", "toml"]

[dependencies.tinydb] # Database for profiles
version = "0.0.3"

[dependencies.serde] # Required for tinydb
version = "1.0"
features = ["derive"]
